--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-renderer/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-renderer/src/main/resources/META-INF/resources/css/main.scss
@@ -73,7 +73,11 @@
 	}
 
 	.lfr-ddm-form-page-description {
-		margin-bottom: 40px;
+		margin-bottom: 23px;
+	}
+
+	.lfr-ddm-form-page-title + .required-warning {
+		margin-top: 0;
 	}
 
 	.lfr-ddm-form-page-title + .row {
@@ -126,9 +130,5 @@
 	.lfr-ddm-form-page-title {
 		padding-left: $side-spacing;
 		padding-right: $side-spacing;
-	}
-
-	.required-warning {
-		margin: 0 0 25px 35px;
 	}
 }
